samples/_failures_safe/1761431283_c6d813_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c62bf632.c: In function ‘main’:
./samples/SAFE/__tmp_c62bf632.c:152:59: error: expected ‘)’ at end of input
  152 |         choice = read_int("Select operation (1-5): ", 1, 5
      |                          ~                                ^
      |                                                           )
./samples/SAFE/__tmp_c62bf632.c:152:9: error: expected declaration or statement at end of input
  152 |         choice = read_int("Select operation (1-5): ", 1, 5
      |         ^~~~~~
./samples/SAFE/__tmp_c62bf632.c:152:9: error: expected declaration or statement at end of input
